fix qrcode and new scrollbar

--- a/my-project/src/App.css
+++ b/my-project/src/App.css
@@ -1,3 +1,26 @@
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3084e4;
+  border-radius: 10px;
+  transition: all ease-in 600ms;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0a4e9c;
+}
+
 .App {
   position: relative;
   width: 100%;
